src/objects/Presenter__c.object
<CustomObject>
    <description>A person submitting forms to Companies House. May be a company director or an accountant.</description>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Email address of the presenter, as given in the user profile from the account.companieshouse.gov.uk API.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Forename__c</fullName>
        <label>Forename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surname__c</fullName>
        <label>Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>User ID as defined by the account.companieshouse.gov.uk API. Given in the user profile response. External, unique.</inlineHelpText>
        <label>User ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Presenter</label>
    <nameField>
        <label>Presenter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Presenters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>